--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>React Character Customization</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, width=device-width">
-    <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/build/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700|Montserrat:500|Amatic+SC:700">
     <link rel="stylesheet" href="/build/css/style.css">
     <style>
